[package]
name = "alchemy-notify-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.17"
futures-util = "0.3.21"
hmac = "0.12.1"
hex-literal = "0.3.4"
sha2 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4.0"
